src/objects/Deposition__c.object
<CustomObject>
    <fields>
        <fullName>Graphical_Alert__c</fullName>
        <formula>If (Primary_CR_Firm__c = &quot;&quot;,&quot;&quot;,IMAGE(&quot;http://www.lexitasng.com/wp-content/uploads/2015/06/Networking.jpg&quot;, &quot;Networked Job&quot;, 200, 400))
&amp;
IF(
(INCLUDES( Deposition_Services__c, &quot;Remote Deposition&quot;) &amp;&amp; NOT(INCLUDES(Deposition_Services__c, &quot;Court Reporter&quot;))) , &quot;Remote without Court Reporting&quot;, &quot;&quot;)
&amp;
If (TEXT(Hard_Copy__c) = &quot;Needed&quot;, IMAGE(&quot;https://nextgen--c.na7.content.force.com/sfc/servlet.shepherd/version/download/068A0000002a1PM?asPdf=false&amp;operationContext=CHATTER&quot;, &quot;Hard Copy&quot;),&quot;&quot;)
&amp;
If ( File_Uploaded_By_Client__c=TRUE,IMAGE(&quot;https://nextgen--c.na7.content.force.com/sfc/servlet.shepherd/version/download/068A0000002a3mN?asPdf=false&amp;operationContext=CHATTER&quot;, &quot;File Uploaded By Client&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>if( Total_Deposition_Cost__c &gt;0, (If( Total_Client_Revenue__c &gt;0,(Total_Client_Revenue__c - Total_Resource_Costs__c -  Misc_Deposition_Costs__c  )/Total_Client_Revenue__c,NULL)),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GuestEmail__c</fullName>
        <label>Scheduler Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GuestName__c</fullName>
        <label>Scheduler Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GuestPhone__c</fullName>
        <label>Scheduler Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hard_Copy__c</fullName>
        <label>Hard Copy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                    <default>true</default>
                    <label>Not Needed</label>
                </value>
                <value>
                    <fullName>Needed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hiring_Attorney_Email__c</fullName>
        <label>Hiring Attorney Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hiring_Attorney__c</fullName>
        <label>Hiring Attorney Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_Firm__c</fullName>
        <label>Hiring Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Claim_Info__c</fullName>
        <label>Insurance Claim Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interpreter_Instructions__c</fullName>
        <label>Interpreter Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Status_Reporter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Received - Reporter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Status_Video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Received - Video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Expedition_Needed__c</fullName>
        <formula>OR(
  INCLUDES(Deposition_Services__c,&quot;Expedite&quot;), 
  NOT(
    OR(
     ISPICKVAL(Expedite__c,&quot;None&quot;),
     ISPICKVAL(Expedite__c,&quot;&quot;)
    )
  )
)</formula>
        <inlineHelpText>This will be checked, when Expedition is needed.</inlineHelpText>
        <label>Is Expedition Needed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Today_Deposition_Date__c</fullName>
        <formula>TODAY()== Deposition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Today Deposition Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loc__c</fullName>
        <formula>UPPER(Event_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Contact__c</fullName>
        <label>Location Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matter_Number__c</fullName>
        <label>Matter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Deposition_Costs__c</fullName>
        <description>Costs related to the deposition such as room rental, transportation and catering.</description>
        <label>Misc. Deposition Costs</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Networking_Reminder_2_for_Conf_Emails__c</fullName>
        <formula>IF( Primary_CR_Firm__c  &lt;&gt; &quot;&quot;, &quot;****ONCE AGAIN: You will NOT be officially attending this job for &quot; &amp; Firm_Name__c &amp; &quot;. We are covering this job for an affiliate, so please tell anyone who asks that you are there representing &quot; &amp; Primary_CR_Firm__c &amp; &quot;. Please still send all deliverables to &quot; &amp; Firm_Name__c &amp; &quot;. as per usual, but in the room and on the record, please use our affiliate’s name only.&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Networking Reminder 2 for Conf Emails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Networking_Reminder_for_Conf_Emails__c</fullName>
        <formula>IF( Primary_CR_Firm__c  &lt;&gt; &quot;&quot;, &quot;****PLEASE NOTE: You will NOT be officially attending this job for &quot; &amp; Firm_Name__c &amp; &quot;. We are covering this job for &quot; &amp; Primary_CR_Firm__c &amp; &quot;. Please still send all deliverables to &quot; &amp; Firm_Name__c &amp; &quot; as per usual, but in the room and on the record, please only mention &quot; &amp; Primary_CR_Firm__c &amp; &quot;.&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Networking Reminder for Conf Emails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Business_Day__c</fullName>
        <formula>CASE(
MOD( (TODAY())- DATE(1900, 1, 7), 7),
5, Deposition_Date__c-2 , /*if Fri */
6,Deposition_Date__c-1, /*if Sat*/
Deposition_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Business Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Pre-event Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <description>Number of Deposition Locations attached to this Deposition</description>
        <inlineHelpText>Number of Deposition Locations attached to this Deposition</inlineHelpText>
        <label>Number of Locations</label>
        <summaryForeignKey>Deposition_Location__c.Deposition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ontime_Production_Complete__c</fullName>
        <formula>if(ISBLANK(Transcript_Complete_Date__c),
Due_Date_To_The_Client_Computed__c  -  Production_Complete_Date__c,
Due_Date_To_The_Client_Computed__c  -  Transcript_Complete_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Time Production Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ontime_Yes_No__c</fullName>
        <formula>IF(ISBLANK(Production_Complete_Date__c)=FALSE,IF (Due_Date_To_The_Client_Computed__c   &gt;=   Production_Complete_Date__c, &quot;On Time&quot;,&quot;Late&quot;),&quot;Not Complete&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Complete Ontime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Video__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner - Video</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Depositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page_Count__c</fullName>
        <label>Total Page Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pipeline</label>
        <referenceTo>Client_Deals__c</referenceTo>
        <relationshipLabel>Depositions</relationshipLabel>
        <relationshipName>Depositions_from_Pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Deposition_Services__c</fullName>
        <label>Portal Deposition Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expedite</fullName>
                </value>
                <value>
                    <fullName>Traditional Video</fullName>
                </value>
                <value>
                    <fullName>Realtime</fullName>
                </value>
                <value>
                    <fullName>Rough Draft</fullName>
                </value>
                <value>
                    <fullName>Interpreter</fullName>
                </value>
                <value>
                    <fullName>Synchronized Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Deposition_Notes__c</fullName>
        <label>Production Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_Production_Notes__c</fullName>
        <label>Post Production Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_event_Notes__c</fullName>
        <label>Post-event Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Predicted_Deposition_Cost__c</fullName>
        <label>Predicted Deposition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_CR_Firm__c</fullName>
        <description>The court reporting firm for which we&apos;re handling this deposition.</description>
        <label>Networking/Covering For</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Court_Reporting_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court Reporting Brand</label>
        <referenceTo>Firm__c</referenceTo>
        <relationshipLabel>Depositions</relationshipLabel>
        <relationshipName>Depositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Deposition_Date_With_CR_Email__c</fullName>
        <formula>IF(OR(ISBlank( Deposition_Date__c ),ISBlank( CR_Email_Address__c ) ),&apos;&apos;,TEXT(Deposition_Date__c -1)&amp;&apos;==Email==&apos;&amp;CR_Email_Address__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Deposition Date With CR Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Value__c</fullName>
        <label>Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Alert__c</fullName>
        <description>Who needs to be notified when these people schedule jobs?</description>
        <label>Production Alert</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Complete_Date__c</fullName>
        <label>Production Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Email_Address__c</fullName>
        <label>Production Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Production_Owner__c</fullName>
        <label>Production Owner</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Region__c</fullName>
        <label>Production Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QC_Audit__c</fullName>
        <label>QC Audit</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirmation of the Quality Control step.</description>
        <label>QC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rates_Reporter__c</fullName>
        <label>Rates - Reporter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rates_Videographer__c</fullName>
        <label>Rates - Videographer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recording_Status__c</fullName>
        <label>Recording Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No video</fullName>
                    <default>true</default>
                    <label>No video</label>
                </value>
                <value>
                    <fullName>Record</fullName>
                </value>
                <value>
                    <fullName>Do not record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporter_Assigned_Datestamp__c</fullName>
        <label>Reporter Assigned Datestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reporter_Assigner__c</fullName>
        <label>Reporter Assigner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Assignment_Duration__c</fullName>
        <formula>Reporter_Assigned_Datestamp__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporter Assignment Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporter_EOD_Check_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporter EOD Check In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporter_Hired__c</fullName>
        <formula>NULLVALUE(CR_Email_Address__c,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporter Hired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Instructions__c</fullName>
        <description>Instructions for the court reporter about a specific deposition.</description>
        <label>Reporter Instructions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <formula>State_Rule__r.Rule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_URL__c</fullName>
        <formula>&quot;https://console.aws.amazon.com/s3/home?region=us-east-1#&amp;bucket=depositions&amp;prefix=&quot;&amp;Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S3 URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Description_for_Email__c</fullName>
        <formula>IF(INCLUDES(Deposition_Services__c, &quot;Realtime - Local&quot;), &quot;The client has requested realtime in the room. &quot;, &quot;&quot;) 
&amp;
IF(INCLUDES(Deposition_Services__c, &quot;Realtime - Internet&quot;), &quot;The client has requested a realtime text stream via the internet. Please ensure that you bring all necessary equipment to send out the stream. &quot;, &quot;&quot;)
&amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Rough Draft&quot;), &quot;The client has requested a rough draft at the end of the day. &quot;, &quot;&quot;) 
&amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Expedite&quot;), 
&quot;The client has requested expedited delivery of the final transcript. Please confirm the exact date for delivery with them.&quot; &amp; (IF(not(text(Expedite__c)=&quot;None&quot;), &quot;: &quot; &amp; Text(Expedite__c) &amp; &quot;. &quot;, &quot;. &quot;)), &quot;&quot;) 
&amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Rough Draft - Possible&quot;), &quot;The client may want a rough draft at the end of the day. Please confirm with them after the deposition. &quot;, &quot;&quot;) 
&amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Realtime - Possible&quot;), &quot;The client may want a realtime feed during the deposition. Please ask them before the deposition begins. &quot;, &quot;&quot;)
&amp;
IF(INCLUDES(Deposition_Services__c, &quot;Traditional Video&quot;), &quot;Just an FYI: this job will have a videographer present. &quot;, &quot;&quot;)
&amp;
IF(INCLUDES(Deposition_Services__c, &quot;Remote Deposition&quot;), &quot;Just an FYI: this job will have remote participants via a computer or videoconferencing system. &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Description for Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Ordered__c</fullName>
        <label>Post Deposition Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expedite</fullName>
                </value>
                <value>
                    <fullName>Rough ASCII</fullName>
                </value>
                <value>
                    <fullName>Synch (Sanction)</fullName>
                </value>
                <value>
                    <fullName>Synch (Trial Director)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate that there are special instructions below.</description>
        <label>Special Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_text__c</fullName>
        <description>Detailed description of the special instructions used on this deposition.</description>
        <label>Special Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Starts_Time__c</fullName>
        <label>Starts Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>State_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Rule</label>
        <referenceTo>State_Rules__c</referenceTo>
        <relationshipLabel>Depositions</relationshipLabel>
        <relationshipName>Depositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Time__c</fullName>
        <label>Stop Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Summary_of_Billable_Services__c</fullName>
        <formula>IF( Bill_for_Last_Minute_Cancellation__c = TRUE, &quot;Bill the client for a late cancellation. &quot;,NULL) &amp;
IF(INCLUDES(Deposition_Services__c, &quot;Traditional Video&quot;), &quot;The client ordered a traditional videographer. &quot;, NULL) &amp; 
IF(NOT(INCLUDES(Deposition_Services__c, &quot;Court Reporter&quot;)), &quot;The client did not order a court reporter. &quot;, NULL) &amp; 
IF(INCLUDES(Deposition_Services__c, &quot;LegalView (Remote Video)&quot;),&quot;LegalView was ordered. &quot;, NULL) &amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Realtime - Local&quot;),&quot;The client ordered local realtime. &quot;,NULL) &amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Realtime - Internet&quot;),&quot;The client ordered Internet realtime. &quot;,NULL) &amp;
IF(INCLUDES(Deposition_Services__c, &quot;Realtime - Possible&quot;), &quot;The client tentatively ordered realtime. &quot;, NULL) &amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Rough Draft&quot;), &quot;The client ordered a rough draft. &quot;, NULL) &amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Rough Draft - Possible&quot;), &quot;The client may have ordered a rough draft. &quot;, NULL) &amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Interpreter&quot;), &quot;The client ordered an interpreter. &quot;, NULL) &amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Synchronized Video&quot;),&quot;The client ordered synchronized video. &quot;, NULL) &amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Process Serving&quot;),&quot;The client ordered a process server. &quot;, NULL) &amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Expedite&quot;),&quot;This transcript was expedited. &quot;, NULL) &amp; 
IF(INCLUDES(Deposition_Services__c, &quot;Teleconference&quot;),&quot;Some of the parties were connected through a teleconference. &quot;, NULL) &amp; 
IF(text(Expedite__c)=&quot;None&quot;,&quot;&quot;,&quot;The expedite level on this &quot; &amp;  Event_Type_Lowercase__c &amp; &quot; is &quot; &amp;  Text(Expedite__c) &amp; &quot;. &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary of Billable Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Recap__c</fullName>
        <description>Summary of the deposition and any notable events.</description>
        <label>Monitor Recap</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_to_Bill__c</fullName>
        <formula>Billed_Date__c -  Production_Complete_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Bill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Client_Revenue__c</fullName>
        <description>The sum of all client invoices on this deposition.</description>
        <label>Total Client Revenue</label>
        <summarizedField>Invoice__c.Total_Revenue_After_Credits__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Type__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice__c.Status__c</field>
            <operation>equals</operation>
            <value>Valid</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Deposition__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Commissionable_Revenue__c</fullName>
        <label>Total Commissionable Revenue</label>
        <summarizedField>Invoice__c.Commissionable_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Type__c</field>
            <operation>equals</operation>
            <value>client</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice__c.Status__c</field>
            <operation>equals</operation>
            <value>Valid</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Deposition__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Deposition_Cost__c</fullName>
        <formula>Misc_Deposition_Costs__c  +  Total_Resource_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deposition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Resource_Costs__c</fullName>
        <description>Sum of court reporter, videographer, technician, and interpreter.</description>
        <label>Total Resource Costs</label>
        <summarizedField>Invoice__c.Invoice_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Type__c</field>
            <operation>notEqual</operation>
            <value>Client</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled, Void</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Deposition__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transcript_Complete_Date__c</fullName>
        <label>Transcript Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transcript_Complete_Ontime__c</fullName>
        <formula>IF(ISBLANK(Transcript_Complete_Date__c)=FALSE,IF (Due_Date_To_The_Client_Computed__c &gt;= Transcript_Complete_Date__c, &quot;On Time&quot;,&quot;Late&quot;),&quot;Not Complete&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript Complete Ontime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transcript_Due_DOW__c</fullName>
        <formula>CASE(MOD( Transcript_Due_From_Reporter_Computed__c - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2, &quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6, &quot;Friday&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript Due DOW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transcript_Due_From_Reporter_Computed__c</fullName>
        <inlineHelpText>Business days</inlineHelpText>
        <label>Transcript Due From Reporter (Computed)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transcript_Due_From_Reporter__c</fullName>
        <formula>CASE(Expedite__c, 
&quot;Same day turnaround&quot;, Deposition_Date__c, 
&quot;Next day turnaround&quot;, Due_Date_To_The_Client_Computed__c  - 1,
&quot;2 day turnaround&quot;,Due_Date_To_The_Client_Computed__c  - 1,
&quot;3 day turnaround&quot;,Due_Date_To_The_Client_Computed__c  - 1,
&quot;4 day turnaround&quot;,Due_Date_To_The_Client_Computed__c  - 1,
&quot;5 day turnaround&quot;,Due_Date_To_The_Client_Computed__c  - 1,
Due_Date_To_The_Client_Computed__c  - 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript Due From Reporter - Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transcript_Due_and_Received_Dif__c</fullName>
        <formula>Transcript_Due_From_Reporter_Computed__c -  Transcript_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript Due and Received Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transcript_Due_and_Received_Diff__c</fullName>
        <formula>Transcript_Due_From_Reporter_Computed__c - Transcript_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript Due and Received Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transcript_Received_Date__c</fullName>
        <label>Transcript Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transcript_Status__c</fullName>
        <label>Transcript Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not received</fullName>
                    <default>true</default>
                    <label>Not received</label>
                </value>
                <value>
                    <fullName>In production</fullName>
                </value>
                <value>
                    <fullName>Production complete</fullName>
                </value>
                <value>
                    <fullName>No transcript</fullName>
                </value>
                <value>
                    <fullName>Transcript on hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transcript_page_count__c</fullName>
        <label>Transcript page count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turnaround__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Transcript Turnaround</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>